--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <label for="comments">Comments:</label><br>
         <textarea id="comments" name="comments" rows="4" cols="50" required></textarea><br><br>
         
-        <label for="recommendation">Would you recommend this meeting to others?</label>
+        <legend>Would you recommend this meeting to others?</legend>
         <input type="radio" id="recommendation_yes" name="recommendation" value="yes">
         <label for="recommendation_yes">Yes</label>
         <input type="radio" id="recommendation_no" name="recommendation" value="no">
@@ -138,4 +138,7 @@
   </details>
   </section>
 </body>
+<footer>
+  <p>&copy; 2024 Company Name. All rights reserved.</p>
+</footer>
 </html>
