--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section>
     <h2>Diagrams / Presentations</h2>
     <img src="catsmeeting.png" alt="cats meeting">
-    <img src="diagram2.jpg" alt="Diagram 2">
+    <img src="stoic.png" alt="Diagram 2">
   </section>
 
   <section>
